force-app/main/default/objects/Order_Invoice__c/Order_Invoice__c.object-meta.xml
<CustomObject>
    <label>Order Invoice</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Order Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>