force-app/main/default/objects/Order_Invoice__c/fields/PaaS_Subscription_Termination__c.field-meta.xml
<CustomField>
    <fullName>PaaS_Subscription_Termination__c</fullName>
    <label>PaaS Subscription Termination</label>
    <type>Date</type>
</CustomField>