force-app/main/default/objects/Order_Invoice__c/fields/SaaS_Service_Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Service_Term_Duration__c</fullName>
    <label>SaaS Service Term Duration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>