force-app/main/default/objects/Order_Invoice__c/fields/SaaS_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Subscription_Start_Date__c</fullName>
    <label>SaaS Subscription Start Date</label>
    <type>Date</type>
</CustomField>